# komadori

./: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: index.js  site.scss
frontend/src/actions/: index.js
frontend/src/api/: admin.js  user.js
frontend/src/components/: AdminManageGroups.js  AdminManageUsers.js  EditUser.js  GithubLogin.js  NavWrapper.js  TruncUuid.js
frontend/src/containers/: AdminDashboardContainer.js  AdminManageGroups.js  AdminManageUsers.js  EditUser.js
frontend/src/reducers/: index.js
migrations/2018-11-14-012553_github-account-metadata/: up.sql
src/: admin_routes.rs  api_main.rs  errors.rs  group_routes.rs  lib.rs  main.rs  oauth_routes.rs  permissions.rs  policy.rs  user_routes.rs
src/api/: mod.rs
src/db/: groups.rs  schema.rs  users.rs
src/hydra/: client.rs
src/types/: mod.rs
tests/: integ_tests.rs
tokio_fairing/: Cargo.toml
tokio_fairing/src/: lib.rs
