[package]
name = "tokio_fairing"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"

# See https://github.com/SergioBenitez/Rocket/issues/513; this should be temporary
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
